# poptranscribe

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/plans/: 2025-02-10-poptranscribe-design.md  2025-02-10-poptranscribe-implementation.md
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: app_state.rs  commands.rs  lib.rs  main.rs
src-tauri/src/audio/: capture.rs  mixer.rs  mod.rs  store.rs
src-tauri/src/db/: mod.rs
src-tauri/src/export/: mod.rs
src-tauri/src/mistral/: batch.rs  chat.rs  mod.rs  realtime.rs
src/components/: AudioLevel.tsx  ChatPanel.tsx  DiarizedTranscript.tsx  ExportButtons.tsx  Layout.tsx  SearchBar.tsx  SessionCard.tsx  SessionList.tsx  SpeakerEditor.tsx  SummaryPanel.tsx  TranscriptLine.tsx
src/views/: DetailView.tsx  HistoryView.tsx  SessionView.tsx  SettingsView.tsx
